--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "weather-app",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "devDependencies": {
-    "prettier": "^3.5.2"
-  },
-  "dependencies": {
-    "@astrojs/svelte": "^7.0.4",
-    "@tailwindcss/vite": "^4.0.8",
-    "astro": "^5.3.1",
-    "ol": "^10.4.0",
-    "openmeteo": "^1.1.5",
-    "svelte": "^5.20.4",
-    "tailwindcss": "^4.0.8",
-    "typescript": "^5.7.3"
-  }
+    "name": "weather-app",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "format": "prettier --write ."
+    },
+    "devDependencies": {
+        "prettier": "^3.5.2"
+    },
+    "dependencies": {
+        "@astrojs/svelte": "^7.0.4",
+        "@tailwindcss/vite": "^4.0.8",
+        "astro": "^5.3.1",
+        "ol": "^10.4.0",
+        "openmeteo": "^1.1.5",
+        "prettier-plugin-svelte": "^3.3.3",
+        "svelte": "^5.20.4",
+        "tailwindcss": "^4.0.8",
+        "typescript": "^5.7.3"
+    }
 }
