--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ permissions:
     contents: read
     pages: write
     id-token: write
+    actions: write
+    deployments: write
+    statuses: write
 
 jobs:
     build-and-deploy:
@@ -38,7 +41,9 @@ jobs:
             - name: Setup Pages
               uses: actions/configure-pages@v4
               with:
+                  enablement: true
                   static_site_generator: astro
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
