--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,13 @@ on:
     # Trigger the workflow every time you push to the `main` branch
     # Using a different branch name? Replace `main` with your branch’s name
     push:
-        branches: [main]
+        branches: [master]
     # Allows you to run this workflow manually from the Actions tab on GitHub.
     workflow_dispatch:
 
 # Allow this job to clone the repo and create a page deployment
 permissions:
-    contents: read
+    contents: write
     pages: write
     id-token: write
 
